syntax = "proto3";

package transfers;

service Settlement {

}

message UpdateRequest {
  string message = 1;
}

message UpdateResponse {
  string message = 1;
}

message QueryRequest {
  string message = 1;
}

message QueryResponse {
  string message = 1;
}
